# virgil-iotkit

./: library.json
_pio_include/virgil/iot/protocols/snap/prvs/: prvs-client.h  prvs-structs.h
demo/esp32/initializer/: CMakeLists.txt  platformio.ini
demo/nix/: CMakeLists.txt
demo/nix/common/src/helpers/: file-cache.c  file-io.c
demo/nix/common/src/sdk-impl/netif/: netif-udp-broadcast.c
demo/nix/gateway/: CMakeLists.txt
demo/nix/thing/: CMakeLists.txt
demo/qt/src/: VSQApplication.cpp  resources.qrc
integration/platformio/defaults-ble/netif/: netif-udp-broadcast.c
integration/platformio/defaults-ble/platform/init/idf/: flash_nvs.c  udp_socket.c  wifi_network.c
integration/platformio/defaults/helpers/: file-io.c
integration/qt/default-impl/: hal.cpp
integration/qt/default-impl/netif/ble/include/virgil/iot/qt/netif/: VSQNetifBLE.h  VSQNetifBLEEnumerator.h
integration/qt/default-impl/netif/ble/src/: VSQNetifBLE.cpp  VSQNetifBLEEnumerator.cpp
integration/qt/facade/include/virgil/iot/qt/: VSQIoTKit.h
integration/qt/facade/include/virgil/iot/qt/helpers/: VSQFeatures.h
integration/qt/facade/include/virgil/iot/qt/protocols/snap/: VSQSnapCFGClient.h  VSQSnapINFOClient.h  VSQSnapINFOClientQml.h  VSQSnapLampClient.h  VSQSnapSnifferQml.h
integration/qt/facade/src/: VSQSnapCFGClient.cpp  VSQSnapINFOClient.cpp  VSQSnapLampClient.cpp
integration/qt/facade/src/helpers/: VSQIoTKitFacade.cpp
scripts/platformio/: prepare_includes.sh
sdk/: CMakeLists.txt
sdk/cmake/: clangformat.cmake
sdk/default-impl/: CMakeLists.txt
sdk/default-impl/crypto/vs-soft-secmodule/include/private/: vs-soft-secmodule-internal.h
sdk/default-impl/crypto/vs-soft-secmodule/include/virgil/iot/vs-soft-secmodule/: vs-soft-secmodule.h
sdk/default-impl/crypto/vs-soft-secmodule/src/: soft-secmodule-keypair.c  soft-secmodule-slots.c
sdk/helpers/macros/include/virgil/iot/macros/: macros.h
sdk/helpers/status_code/include/virgil/iot/status_code/: status_code.h
sdk/modules/: CMakeLists.txt
sdk/modules/crypto/: CMakeLists.txt
sdk/modules/crypto/converters/: CMakeLists.txt
sdk/modules/crypto/high-level/: CMakeLists.txt
sdk/modules/crypto/high-level/include/virgil/iot/high-level/: high-level-crypto-structs.h  high-level-crypto.h
sdk/modules/crypto/high-level/src/: high-level-crypto.c
sdk/modules/crypto/secmodule/include/virgil/iot/secmodule/: secmodule.h
sdk/modules/crypto/session/: CMakeLists.txt
sdk/modules/crypto/session/include/virgil/iot/session/: session-structs.h  session.h
sdk/modules/crypto/session/src/: session.c
sdk/modules/logger/include/virgil/iot/logger/: logger.h
sdk/modules/protocols/snap/: CMakeLists.txt
sdk/modules/protocols/snap/include/private/: snap-private.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/: snap.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/: snap-structs.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/cfg/: cfg-client.h  cfg-private.h  cfg-server.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/info/: info-client.h  info-private.h  info-server.h  info-structs.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/lamp/: lamp-client.h  lamp-private.h  lamp-server.h  lamp-structs.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/prvs/: prvs-structs.h
sdk/modules/protocols/snap/include/virgil/iot/protocols/snap/scrt/: scrt-client.h  scrt-private.h  scrt-server.h  scrt-structs.h
sdk/modules/protocols/snap/src/: snap.c
sdk/modules/protocols/snap/src/services/cfg/: cfg-client.c  cfg-server.c
sdk/modules/protocols/snap/src/services/fldt/: fldt-client.c  fldt-server.c
sdk/modules/protocols/snap/src/services/info/: info-client.c  info-server.c
sdk/modules/protocols/snap/src/services/lamp/: lamp-client.c  lamp-server.c
sdk/modules/protocols/snap/src/services/msgr/: msgr-client.c  msgr-server.c
sdk/modules/protocols/snap/src/services/prvs/: prvs-client.c  prvs-server.c
sdk/modules/protocols/snap/src/services/scrt/: scrt-client.c  scrt-server.c
sdk/modules/provision/: CMakeLists.txt
sdk/modules/provision/include/virgil/iot/provision/: provision-structs.h  provision.h
sdk/modules/provision/src/: provision.c
sdk/modules/secbox/include/virgil/iot/secbox/: secbox.h
sdk/modules/secbox/src/: secbox.c
sdk/modules/users/: CMakeLists.txt
sdk/modules/users/include/virgil/iot/users/: users-structs.h  users.h
sdk/modules/users/src/: users.c
sdk/scripts/: build-for-qt.sh
